--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tl="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-
+    <!--tl:tl_divider_color="#1A000000"-->
+    <!--tl:tl_divider_padding="13dp"-->
+    <!--tl:tl_divider_width="1dp"-->
+    <!--tl:tl_indicator_width_equal_title="true"-->
     <com.flyco.tablayout.SlidingTabLayout
         android:id="@+id/project_tab_layout"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="#EEEEEE"
-        tl:tl_divider_color="#1A000000"
-        tl:tl_divider_padding="13dp"
-        tl:tl_divider_width="1dp"
-        tl:tl_indicator_color="#000000"
-        tl:tl_indicator_height="1.5dp"
-        tl:tl_indicator_width_equal_title="true"
-        tl:tl_tab_padding="22dp"
+        tl:tl_indicator_height="2.5dp"
+        tl:tl_indicator_width="24dp"
+        tl:tl_underline_gravity="BOTTOM"
+        tl:tl_tab_padding="20dp"
         tl:tl_tab_space_equal="true"
-        tl:tl_textSelectColor="#000000"
-        tl:tl_textUnselectColor="#66000000"
-        tl:tl_underline_color="#1A000000"
-        tl:tl_underline_height="1dp">
+        tl:tl_indicator_corner_radius="5dp"
+        tl:tl_indicator_color="@color/colorPrimary"
+        tl:tl_textSelectColor="@color/colorPrimary"
+        tl:tl_textUnselectColor="#66000000">
 
 
     </com.flyco.tablayout.SlidingTabLayout>
@@ -32,4 +32,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</LinearLayout>
+    <include
+        android:id="@+id/error_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        layout="@layout/error_view"/>
+
+</FrameLayout>
