--- a/app/src/main/res/layout/item_home_projects_list.xml
+++ b/app/src/main/res/layout/item_home_projects_list.xml
@@ -19,11 +19,11 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Title"
-            app:layout_constraintHorizontal_weight="1"
+            android:text="我们的SurfaceView里面有一个Rect二维数组, 用来存放这些矩形, 小猪离开手指之后, 就开始从小猪当前所在的矩形,用广度优先遍历, 找到一条最短的路径, 然后再根据这条路径在Rect数组中找到对应的矩形, 最后根据这些对应的矩形的坐标来确定出Path."
             android:textAlignment="viewStart"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            app:layout_constraintWidth_percent="0.65"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/home_project_img"
