--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -29,6 +29,7 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/project_viewpager"
+        android:layout_marginTop="48dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
