--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#474747</color>
+    <color name="colorPrimaryDark">#474747</color>
+    <color name="colorAccent">#474747</color>
 
     <!-- title 半透明背景颜色 -->
     <color name="color_title_bg">#CCFFFFFF</color>
     <color name="color_gray">#9a9a9a</color>
     <color name="color_translucent">#00000000</color>
     <color name="color_black">#000000</color>
+    <color name="color_white">#FFFFFF</color>
 </resources>
